[tool.poetry]
name = "quran-cli"
version = "0.1.0"
description = "Listen to Quran with your favourite reciter easily from your terminal"
authors = ["MostafaWael  AhmedIhab"]
readme = "README.md"
repository = "https://github.com/Mostafa-wael/Quran-cli"
keywords = ["quran", "mpv"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
prettytable==3.3.0
requests==2.28.1

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
